q10-clusterIP.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-http
  labels:
    app: php-http
    name: php-http
  namespace: network-review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-http
      name: php-http
  template:
    metadata:
      labels:
        app: php-http
        name: php-http
    spec:
      containers:
      - image: 'quay.io/redhattraining/php-ssl:v1.0'
        name: php-http
        ports:
        - containerPort: 8080
          name: php-http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-http
    name: php-http
  name: php-http
