q10-headless-svc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-headless
  labels:
    app: example-headless
  namespace: demo2022
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: example-headless
      image: 'image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest'
      ports:
        - containerPort: 8080
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
Version: v1
kind: Service
metadata:
  name: example-headless 
spec:
  clusterIP: None 
  ports:
  - name: web
    port: 5432
    protocol: TCP
    targetPort: 8080
  selector:
    name: example-headless 
  type: ClusterIP
