q11-php-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-http
  labels:
    app: php-http
    name: php-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-http
      name: php-http
  template:
    metadata:
      labels:
        app: php-http
        name: php-http
    spec:
      containers:
      - resources:
          limits:
            memory: "128Mi"
            cpu: '0.5'
        # Set the container image name
        image: 'quay.io/redhattraining/php-ssl:v1.0'
        name: php-http
        ports:
          # Define the container port
        - containerPort: 8080
          name: php-http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-http
    name: php-http
  name: php-http
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    name: php-http
