q12-php-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-https
  labels:
    app: php-https
    name: php-https
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-https
      name: php-https
  template:
    metadata:
      labels:
        app: php-https
        name: php-https
       
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - resources:
          limits:
            memory: "128Mi"
            cpu: '0.5'
        # Set the container image name
        image: 'quay.io/redhattraining/php-ssl:v1.1'
        name: php-https
        ports:
          # Define the container port
        - containerPort: 8443
          name: php-https
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - name: tls-certs
          readOnly: true
          mountPath: /usr/local/etc/ssl/certs
      volumes:
      - name: tls-certs
        secret:
          # Define the name the secret
          secretName: php-certs
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-https
    name: php-https
  name: php-https
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    name: php-https
