q10-ingress-2-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
#  annotations:
#    route.openshift.io/termination: "reencrypt" 
spec:
  rules:
  - host: example-ingress.apps.cluster-xts97.xts97.sandbox2351.opentlc.com
    http:
      paths:
      - backend:
          service:
            name: example-ingress
            port:
              number: 80
        path: /
        pathType: Prefix
