q10-ingress-php-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
#  annotations:
#    route.openshift.io/termination: "reencrypt" 
spec:
  rules:
  - host: todo-ingress.apps.ocp4.example.com
    http:
      paths:
      - backend:
          service:
            name: php-http
            port:
              number: 80
        path: /
        pathType: Prefix
