q8-vpa-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    creationTimestamp: null
    labels:
      app: vpa-app
    name: vpa-app
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: vpa-app
    strategy: {}
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: vpa-app
      spec:
        containers:
        - image: quay.io/redhattraining/hello-nginx:v1.0
          name: vpa-app
          resources:
            requests:
              cpu: "25m"
              memory: 25Mi
            limits:
              cpu: "100m"
              memory: 100Mi
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: vpa-app
    name: vpa-app
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: vpa-app
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 60s
    creationTimestamp: null
    labels:
      app: vpa-app
    name: vpa-app
  spec:
    host: ""
    port:
      targetPort: 8080
    subdomain: ""
    to:
      kind: ""
      name: vpa-app
      weight: null
  status:
    ingress: null
kind: List
metadata: {}
